# tengine-inference

./: README.md
Tengine-lite/: CMakeLists.txt  compile.sh  compile_convert_tool.sh
Tengine-lite/benchmark/: CMakeLists.txt  README.md
Tengine-lite/cmake/: torch.cmake
Tengine-lite/pytengine/: README.md
Tengine-lite/source/api/: c_api.c
Tengine-lite/source/device/: CMakeLists.txt
Tengine-lite/source/device/acl/: acl_executor.cc  acl_limit.hpp
Tengine-lite/source/device/opencl/cl4/: depthwise_conv2d.cl
Tengine-lite/source/device/opencl/oppack4/: ocl_conv2d.cc  ocl_dwconv.cc
Tengine-lite/source/device/tensorrt/op/: trt_instancenorm.cc  trt_pad.cc  trt_reduction.cc  trt_resize.cc  trt_split.cc  trt_squeeze.cc
Tengine-lite/source/device/tim-vx/op/: timvx_batchnorm.cc  timvx_crop.cc  timvx_deconv.cc  (+1 more)
Tengine-lite/source/device/torch/: torch_helper.cc
Tengine-lite/source/graph/: tensor.c  tensor.h
Tengine-lite/source/module/: module.c
Tengine-lite/source/operator/prototype/: flatten.c  permute.c
Tengine-lite/source/scheduler/: scheduler.c
Tengine-lite/tools/align_tool/: readme.md
Tengine-lite/tools/convert_tool/: CMakeLists.txt  CMakeLists.txt.pack  convert_tool.cpp
Tengine-lite/tools/convert_tool/caffe/: caffe2tengine.cpp  caffe2tengine.hpp  te_caffe.proto
Tengine-lite/tools/convert_tool/darknet/: darknet2tengine.cpp
Tengine-lite/tools/optimize/: convert_model_batch.py
Tengine-lite/tools/quantize/: CMakeLists.txt  README.md  quant_save_graph.cpp  quant_tool_int8.cpp  quant_tool_uint8.cpp
inference_test/: CMakeLists.txt  run.sh  test.cpp
(+13 files in other folders)
